# axis-knowledge-rag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  docker.yml  ragas-abtest.yml  ragas.yml
_ai_workspace/bridge/: README.md  dispatch.sh  dispatch_v2.sh  dispatch_v3.sh  dispatch_v4.sh
_ai_workspace/bridge/inbox/: INDEX.md  spec_001.md  spec_002.md  spec_003.md  spec_004.md  spec_005.md  spec_006.md  spec_007.md  spec_008.md  spec_009.md  spec_010.md  spec_011.md  spec_012.md  spec_013.md  spec_014.md  spec_015.md  spec_016.md  spec_017.md  spec_018.md  spec_019.md  spec_020.md  spec_021.md  spec_022.md  spec_023.md  spec_024.md  spec_025.md  spec_026.md  spec_027.md  spec_028.md  spec_029.md  spec_030.md  spec_031.md  spec_032.md  spec_033.md  spec_034.md  spec_035.md  spec_036.md  spec_037.md  spec_040.md  spec_050.md
_ai_workspace/bridge/outbox/: result_001.md  result_002.md  result_003.md  result_004.md  result_005.md  result_006.md  result_009.md  result_013.md  result_016.md  result_017.md  result_018.md  result_019.md  result_023.md  result_024.md  result_025.md  result_026.md  result_028.md  result_029.md  result_030.md  result_031.md  result_032.md  result_034.md  result_036.md  result_037.md  result_040.md  result_041.md  result_044.md  result_050.md
_ai_workspace/bridge/templates/: result_template.md  spec_template.md
backend/: requirements.txt
backend/src/: _citations.py  _decay.py  api.py  bm25_index.py  chunker.py  config.py  conversation.py  embedder.py  feedback.py  gap_detection.py  graph.py  ingest_web.py  ingester.py  ingester_schemas.py  integrity.py  live_ingest.py  loader.py  marker.py  normalizer.py  parent_storage.py  question_rewriter.py  rag.py  schemas.py  search.py  vector_store.py
backend/tests/: conftest.py  test_api.py  test_bm25_index.py  test_chunker.py  test_citations.py  test_conversation.py  test_conversation_redis.py  test_conversation_sqlite.py  test_decay.py  test_embedder.py  test_feedback.py  test_gap_detection.py  test_graph.py  test_ingest_web.py  test_ingester.py  test_integration_normalization.py  test_integrity.py  test_live_ingest.py  test_loader.py  test_marker.py  test_normalizer.py  test_ollama_backend.py  test_parent_storage.py  test_question_rewriter.py  test_rag.py  test_search.py  test_vector_store.py
backend/tests/fixtures/knowledge/: 01-rag-patterns.md  02-vector-search.md  04-claude-skills.md  06-prompt-injection.md
browser-extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
docs/: INDEX.md  api-reference.md  architecture.md  browser-extension.md  configuration.md  deployment.md  design-decisions.md  evaluation.md  ingester.md  integrity.md  marker.md  mcp-server.md  normalizer.md  portfolio-notes.md  search-fusion.md  spec-v2.md
docs/adr/: ADR-017-parent-document-retrieval.md  ADR-018-conversational-rag.md  ADR-019-ragas-evaluation.md  ADR-020-citation-highlighting.md  ADR-021-time-weighted-decay.md  ADR-022-session-persistence.md  ADR-023-parent-storage-sqlite.md  ADR-024-graphrag-retrieval-expansion.md  ADR-025-3d-graph-visualization.md  ADR-026-ollama-integration.md  ADR-027-browser-extension.md  ADR-028-active-learning-feedback.md  ADR-029-knowledge-gap-detection.md  ADR-030-bidirectional-refs.md  ADR-031-gemini-generation-backend.md  ADR-032-graph-sidebar-layout-fix.md
evaluation/: README.md  __init__.py  baseline.json  feedback_report.py  gap_report.py  judge.py  report.py  requirements.txt  run_abtest.py  run_ragas.py  stats.py
evaluation/datasets/: qa_v1.json
evaluation/tests/: test_feedback_report.py  test_gap_report.py  test_report.py  test_run_abtest_integration.py  test_run_ragas.py  test_stats.py
examples/: claude_desktop_config.json
examples/knowledge/: 01-rag-patterns.md  03-yaml-frontmatter.md  05-prompt-engineering.md  07-evaluation-metrics.md  08-tooling-comparison.md  09-cost-estimation.md  10-future-roadmap.md
examples/raw_memos/: sample_memo_01.txt  sample_memo_02.txt  sample_memo_03.txt
examples/screenshots/: README.md
frontend/: package-lock.json  package.json
frontend/__tests__/: citations.test.ts  graph-sidebar.test.tsx
frontend/public/: .gitkeep
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AnswerPanel.tsx  AxisFilter.tsx  ChatInput.tsx  ChatMessage.tsx  GraphFilterBar.tsx  GraphSidebar.tsx  Knowledge3DGraph.tsx  ResultCard.tsx  SearchBar.tsx  SkeletonLoader.tsx
frontend/src/lib/: api.ts  chatClient.ts  citations.ts  feedbackClient.ts  graphClient.ts
mcp_server/: __main__.py  _errors.py  _session.py  formatters.py  schemas.py  server.py
mcp_server/tests/: test_server.py
scripts/: build_index.py  yamlize.py  yamlize_dir.py
