[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axis-knowledge-rag"
version = "0.1.0.dev0"
description = "Axis-based search + RAG over YAML frontmatter Markdown knowledge (Local-first OSS)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Nakashima" }]
keywords = ["rag", "vector-search", "markdown", "knowledge-base", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "python-frontmatter>=1.1.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "google-generativeai>=0.7.0",
  "chromadb>=0.5.0",
  "anthropic>=0.34.0",
  "streamlit>=1.37.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
axis-knowledge-rag-mcp = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/kazikimaguro13/axis-knowledge-rag"
Repository = "https://github.com/kazikimaguro13/axis-knowledge-rag"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "mcp_server/tests"]
addopts = "-ra -q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["backend/src"]
omit = ["backend/src/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["E501"]
